2006-10-24  Richard Sandiford  <richard@codesourcery.com>

	* src/prelink.h (data_iterator): New structure.
	(init_data_iterator): Declare.
	(get_data_from_iterator): Likewise.
	(get_sym_from_iterator): Likewise.
	* src/data.c (init_data_iterator): New function.
	(get_data_from_iterator): Likewise.
	(get_sym_from_iterator): Likewise.

	* src/prelink.h (READWRITEPROTOSIZE): New macro.  Instantiate
	READWRITEPROTO for big and little endian.  Add prototypes for
	native-endian functions (buf_read_uneNN, read_uneNN, buf_write_neNN
	and write_neNN).  Replace uses of READWRITEPROTO with uses of
	this macro.
	* src/data.c (BUFREADUNE, READUNE, WRITENE, BUFWRITENE): New macros.
	(READWRITESIZE): New macro.  Instantiate READWRITE for big and
	little endian.  Instantiate BUFREADUNE, READUNE, WRITENE
	and BUFWRITENE.  Replace uses of READWRITE with uses of this macro.
	* src/arch-sh.c (read_une32, write_ne32, buf_write_ne32): Delete.

	* src/prelink.h (PLArch): Add an arch_prelink_conflict callback.
	* src/conflict.c (prelink_build_conflicts): If defined, call it
	for each dependency.

	* src/prelink.h (PLArch): Make the arch_prelink callback take
	a "struct prelink_info *" argument, not a "DSO *" argument.
	* src/prelink.c (prelink): Adjust call accordingly.
	* src/arch-alpha.c (alpha_arch_prelink): Adjust definition accordingly.
	* src/arch-arm.c (arm_arch_prelink): Likewise.
	* src/arch-cris.c (cris_arch_prelink): Likewise.
	* src/arch-i386.c (i386_arch_prelink): Likewise.
	* src/arch-ia64.c (ia64_arch_prelink): Likewise.
	* src/arch-ppc.c (ppc_arch_prelink): Likewise.
	* src/arch-s390.c (s390_arch_prelink): Likewise
	* src/arch-s390x.c (s390x_arch_prelink): Likewise
	* src/arch-sh.c (sh_arch_prelink): Likewise.
	* src/arch-sparc64.c (sparc64_arch_prelink): Likewise.
	* src/arch-sparc.c (sparc_arch_prelink): Likewise
	* src/arch-x86_64.c (x86_64_arch_prelink): Likewise.

	* src/prelink.h (PLArch): Add an arch_adjust callback.
	* src/dso.c (adjust_dso): Use it, if defined.
